# mayara-server

./: .gitignore  AGENTS.md  CHANGELOG.md  CLIENT.md  Cargo.toml  DESIGN.md  Makefile  README.md  TODO.md  USAGE.md  build.rs  cliff.toml  release.sh
.github/workflows/: changelog.yml  docker.yml  release.yml  rust.yml
client-examples/bash-client/: radar_info.sh
client-examples/javascript-client/: package.json  run.sh  spoke_viewer.mjs
client-examples/python-client/: requirements.txt  run.sh  spoke_viewer.py
docs/: furuno-far-setup.md  overview.md
docs/design/: architecture.md
docs/develop/: adding_radar_models.md  getting_started.md
mayara-core/: Cargo.toml  README.md
mayara-core/src/: brand.rs  error.rs  io.rs  lib.rs  locator.rs  radar.rs  state.rs
mayara-core/src/capabilities/: builder.rs  controls.rs  mod.rs
mayara-core/src/controllers/: furuno.rs  garmin.rs  mod.rs  navico.rs  raymarine.rs
mayara-core/src/engine/: mod.rs
mayara-core/src/models/: furuno.rs  garmin.rs  mod.rs  navico.rs  raymarine.rs
mayara-core/src/protocol/: furuno.rs  garmin.rs  mod.rs  navico.rs  raymarine.rs
mayara-core/src/protocol/furuno/: command.rs  dispatch.rs  mod.rs  report.rs
mayara-gui/: control.js  controls.css  discovery.css  render_webgpu.js  viewer.html  viewer.js
mayara-lib/: Cargo.toml
mayara-server/: Cargo.toml  build.rs
mayara-server/src/: lib.rs  (+5 more)
mayara-signalk-wasm/: .gitignore  Cargo.toml  README.md  build.js  mayara.wasm  package.json
samples/: signalk_ais.json
tests/: api_rest.rs  api_stream.rs  run-integration.sh  websocket_ais.rs
(+113 files in other folders)
