[package]
name = "mayara-core"
version = "0.1.0"
edition = "2021"
description = "Platform-independent radar protocol library for Mayara"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "mayara_core"
path = "src/lib.rs"

[features]
default = ["navico", "furuno", "raymarine", "garmin"]
navico = []
furuno = []
raymarine = []
garmin = []

[dependencies]
# Minimal dependencies - no I/O, no async, no platform-specific code
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bincode = "1.3"

# Note: NO tokio, NO socket2, NO network-interface, NO platform crates
